# architecture_pattern_python

./: .gitignore  README.md  pyproject.toml
